0.9.9 (20-Oct-2015):
* Remove cpuid

0.9.8 (29-Jun-2015):
* Stunnel uses a new and switchable config for outgoing connections.
* Removed Oasis autogenerated files (create them in build).
* Added opam and travis support.

0.9.7 (20-Nov-2014):
* Update to new Backtrace API
* Remove bindings to 'set_hpet' and 'set_vpt_align'

0.9.6 (4-Jun-2014)
* Fix CPUID functions on ARM to do The Right Thing
* Update to stdext 0.11.0
* Add a configurable timeout to the stunnel bindings
* Set SO_KEEPALIVE on server sockets

0.9.3 (25-Sep-2013):
* Log to syslog via xcp-idl

0.9.2 (10-Sep-2013):
* Update to xenstore 1.2.3

0.9.1 (10-Sep-2013):
* Add CPUID masking support for Intel Haswell DT and Ivy Bridge EN and EP
* Removed spurious http_critical logging
* Use SO_KEEPALIVE for our TLS connections

0.9.0 (5-Jun-2013):
* first public release
