@@ -1,5 +1,6 @@
 0.9.9 (20-Oct-2015):
 * Remove cpuid
+* Remove xen-utils
 
 0.9.8 (29-Jun-2015):
 * Stunnel uses a new and switchable config for outgoing connections.
